# cpp-code-self-project

./: CMakeLists-onlytop.txt  CMakeLists.txt  main.cpp
hello/: hello.cpp  hello.h
world/: CMakeLists.txt  world.cpp  world.h
